# Kaggle-Autopilot

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: __init__.py  cli.py  config.py  errors.py  llm.py  memory.py  orchestrator.py  retry.py  run_log.py
agent/prompts/: eda_analysis.txt  ensemble_strategy.txt  feature_strategy.txt  model_selection.txt  system.txt
agent/tools/: __init__.py  eda.py  ensembler.py  feature_engineering.py  ingest.py  kaggle_api.py  model_selector.py  submitter.py  trainer.py
configs/: agent.yaml  models.yaml
tests/: conftest.py  test_cli.py  test_eda.py  test_ensembler.py  test_feature_engineering.py  test_ingest.py  test_kaggle_api.py  test_llm.py  test_llm_gemini.py  test_memory.py  test_model_selector.py  test_orchestrator.py  test_pipeline_5.py  test_pipeline_full.py  test_retry.py  test_submitter.py  test_trainer.py
