[project]
name = "kaggle-auto-competitor"
version = "1.1.0"
description = "Autonomous LLM-driven agent for Kaggle competitions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.8",
    "anthropic>=0.39",
    "kaggle>=2.2",  # 2.x access-token (KGAT_) auth + typed list responses
    "pandas>=2.2",
    "pyarrow>=15.0",
    "polars>=1.0",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "catboost>=1.2",
    "optuna>=3.6",
    "ydata-profiling>=4.8",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "joblib>=1.4",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "omegaconf>=2.3",
    "loguru>=0.7",
    "typer>=0.12",
]

[project.optional-dependencies]
deep = [
    "torch>=2.2",
    "transformers>=4.40",
    "sentence-transformers>=3.0",
    "safetensors>=0.4",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]

[project.scripts]
agent = "agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=agent --cov-report=term-missing"

[tool.coverage.report]
fail_under = 80
